--- a/src/template/css/app.css
+++ b/src/template/css/app.css
@@ -7649,32 +7649,6 @@ hr {
     hr {
       margin: 3rem 0; } }
 
-.text-link-container {
-  position: relative; }
-  .text-link-container a:link {
-    color: #0097d0;
-    font-size: 18px !important;
-    font-size: 1.125rem !important;
-    font-weight: 700; }
-    @media (min-width: 992px) {
-      .text-link-container a:link {
-        font-size: 23px !important;
-        font-size: 1.4375rem !important; } }
-    .text-link-container a:link::after {
-      background-image: url("../img/svg/arrow-right-dark-blue.svg"); }
-  .text-link-container a::after {
-    position: absolute;
-    top: 0.5rem;
-    content: "";
-    background-image: url("../img/svg/arrow-right-blue.svg");
-    background-repeat: no-repeat;
-    width: 1.5rem;
-    height: 1.5rem; }
-  .text-link-container a:hover {
-    color: #0053a0; }
-    .text-link-container a:hover::after {
-      background-image: url("../img/svg/arrow-right-dark-blue.svg"); }
-
 .btn {
   font-size: 16px !important;
   font-size: 1rem !important;
@@ -8103,6 +8077,36 @@ a.skip-to-content {
       .link-container-icon-right .btn-link:hover::after {
         background-image: url("../img/svg/arrow-right-dark-blue.svg"); }
 
+.text-link-container {
+  position: relative; }
+  .text-link-container a:link {
+    color: #0097d0;
+    font-size: 18px !important;
+    font-size: 1.125rem !important;
+    font-weight: 700; }
+    @media (min-width: 992px) {
+      .text-link-container a:link {
+        font-size: 23px !important;
+        font-size: 1.4375rem !important; } }
+    .text-link-container a:link::after {
+      background-image: url("../img/svg/arrow-right-blue.svg"); }
+  .text-link-container a::after {
+    position: absolute;
+    top: 0.35rem;
+    content: "";
+    background-image: url("../img/svg/arrow-right-blue.svg");
+    background-repeat: no-repeat;
+    background-size: 1rem;
+    width: 1rem;
+    height: 1rem; }
+    @media (min-width: 992px) {
+      .text-link-container a::after {
+        top: 0.55rem; } }
+  .text-link-container a:hover {
+    color: #0053a0; }
+    .text-link-container a:hover::after {
+      background-image: url("../img/svg/arrow-right-dark-blue.svg"); }
+
 #store .card {
   margin-bottom: 30px; }
   @media (min-width: 992px) {
@@ -8305,10 +8309,12 @@ form .custom-file-input:lang(en) ~ .custom-file-label::after {
 form .is-invalid {
   position: relative; }
   form .is-invalid .form-control,
-  form .is-invalid .custom-select {
+  form .is-invalid .custom-select,
+  form .is-invalid .custom-control-label::before {
     border-color: #ed1b2e !important; }
   form .is-invalid .form-control:focus,
   form .is-invalid .custom-select:focus,
+  form .is-invalid .custom-control-label::before,
   form .is-invalid .custom-file-input:focus ~ .custom-file-label {
     box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.25), 0 0 6px #ed1b2e;
     -webkit-box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.25), 0 0 6px #ed1b2e; }
@@ -8325,6 +8331,18 @@ form .is-invalid {
     @media (min-width: 768px) {
       form .is-invalid .help-block {
         top: 3.15rem; } }
+
+form .custom-control.is-invalid .help-block {
+  position: absolute;
+  top: 3.25rem;
+  left: 3rem;
+  color: #ed1b2e;
+  font-style: italic;
+  line-height: 1; }
+  @media (min-width: 992px) {
+    form .custom-control.is-invalid .help-block {
+      top: 2rem;
+      left: 3rem; } }
 
 form .input-group.is-invalid .alert-red {
   position: absolute;
@@ -8352,6 +8370,9 @@ form .is-valid .form-control-feedback {
   position: absolute;
   top: 2.75rem;
   right: 1.5rem; }
+
+form .is-valid .alert-red {
+  display: none; }
 
 /**********************************************
     Form styles
