--- a/src/template/scss/_buttons.scss
+++ b/src/template/scss/_buttons.scss
@@ -86,7 +86,7 @@
     &::after {
       position: absolute;
       content: "";
-      background-image: url("../img/svg/arrow-right-blue.svg");
+      background-image: url("/template/img/svg/arrow-right-blue.svg");
       background-repeat: no-repeat;
       top: 0.65rem;
       right: 0.75rem;
@@ -100,7 +100,7 @@
 
     &:hover {
       &::after {
-        background-image: url("../img/svg/arrow-right-white.svg");
+        background-image: url("/template/img/svg/arrow-right-white.svg");
       }
     }
   }
@@ -121,7 +121,7 @@
     &::before {
       position: absolute;
       content: "";
-      background-image: url("../img/svg/arrow-left-blue.svg");
+      background-image: url("/template/img/svg/arrow-left-blue.svg");
       background-repeat: no-repeat;
       top: 0.6rem;
       left: 0.75rem;
@@ -137,7 +137,7 @@
 
     &:hover {
       &::before {
-        background-image: url("../img/svg/arrow-left-white.svg");
+        background-image: url("/template/img/svg/arrow-left-white.svg");
       }
     }
   }
@@ -223,7 +223,7 @@
     &::after {
       position: absolute;
       content: "";
-      background-image: url("../img/svg/arrow-right-blue.svg");
+      background-image: url("/template/img/svg/arrow-right-blue.svg");
       background-repeat: no-repeat;
       top: 0.75rem;
       width: 1.25rem;
@@ -241,7 +241,7 @@
     &:hover {
       color: $blue;
       &::after {
-        background-image: url("../img/svg/arrow-right-dark-blue.svg");
+        background-image: url("/template/img/svg/arrow-right-dark-blue.svg");
       }
     }
   }
@@ -260,7 +260,7 @@
       }
 
       &::after {
-        background-image: url("../img/svg/arrow-right-blue.svg");
+        background-image: url("/template/img/svg/arrow-right-blue.svg");
       }
     }
 
@@ -268,7 +268,7 @@
       position: absolute;
       top: 0.35rem;
       content: "";
-      background-image: url("../img/svg/arrow-right-blue.svg");
+      background-image: url("/template/img/svg/arrow-right-blue.svg");
       background-repeat: no-repeat;
       background-size: 1rem;
       width: 1rem;
@@ -283,7 +283,7 @@
       color: $blue;
 
       &::after {
-        background-image: url("../img/svg/arrow-right-dark-blue.svg");
+        background-image: url("/template/img/svg/arrow-right-dark-blue.svg");
       }
     }
   }
