Fixed nav (including mobile)

--- a/src/template/scss/_header.scss
+++ b/src/template/scss/_header.scss
@@ -1,4 +1,4 @@
-@import 'utilities';
+@import "utilities";
 
 a.skip-to-content {
   position: absolute;
@@ -17,69 +17,262 @@ a.skip-to-content {
   }
 }
 #header {
-  @include media-breakpoint-up(xl) {
-    .navbar {
-      padding: 0 !important;
+  .navbar {
+    padding-bottom: 0;
+
+    // .navbar-collapse {
+    //   width: 100vw;
+    //   position: relative;
+    //   margin-left: -50vw;
+    //   left: 50%;
+    //   overflow-x: hidden;
+    //   margin-top: 0.5rem;
+    // }
+
+    .navbar-nav {
+      border-top: 1px solid $border-color;
+
+      .nav-item {
+        border-bottom: 1px solid $border-color;
+
+        .nav-link {
+          @include font-size(18);
+          padding-right: 1rem;
+          padding-left: 1rem;
+        }
+
+        .dropdown-toggle {
+          &::after {
+            position: relative;
+            top: 0.5rem;
+            content: "";
+            background-image: url("../img/svg/chevron-down-gray.svg");
+            background-repeat: no-repeat;
+            background-size: 1rem;
+            width: 1rem;
+            height: 1rem;
+            border: none;
+            transform: rotate(0deg);
+            transition: 0.3s transform ease-in-out;
+          }
+        }
+
+        &.dropdown {
+          .dropdown-menu {
+            border: none;
+
+            .dropdown-item {
+              @include font-size(18);
+              color: $cyan;
+              padding: 0.25rem 2rem;
+            }
+          }
+        }
+
+        &.show {
+          .nav-link::after {
+            transform: rotate(-180deg);
+            transition: 0.3s transform ease-in-out;
+          }
+        }
+      }
+    }
+
+    .utilities {
+      border-top: none;
+
+      .nav-item {
+        .nav-link {
+          &.store-icon::before {
+            display: block;
+            content: "";
+            background-image: url("../img/svg/shopping-cart-green.svg");
+            background-repeat: no-repeat;
+            background-size: 1.5rem;
+            width: 1.5rem;
+            height: 1.5rem;
+          }
+        }
+        .dropdown-toggle {
+          &.search-icon::before {
+            display: block;
+            content: "";
+            background-image: url("../img/svg/search-gray.svg");
+            background-repeat: no-repeat;
+            background-size: 1.5rem;
+            width: 1.5rem;
+            height: 1.5rem;
+          }
+
+          &.avatar-icon::before {
+            display: block;
+            content: "";
+            background-image: url("../img/svg/avatar-gray.svg");
+            background-repeat: no-repeat;
+            background-size: 1.5rem;
+            width: 1.5rem;
+            height: 1.5rem;
+          }
+
+          &::after {
+            display: none;
+          }
+        }
+
+        .search-dropdown-menu {
+          padding-right: 15px;
+          padding-left: 15px;
+
+          .input-group {
+            width: 313px;
+
+            .form-control {
+              border-right: none;
+            }
+
+            .input-group-append .btn {
+              background-color: $white;
+              border-color: $border-color;
+              border-left: none;
+              padding: 0 0.75rem;
+            }
+          }
+        }
+      }
     }
   }
 
-  .navbar-nav {
-    .nav-item {
-      &:hover {
-        background-color: $cyan;
+  @include media-breakpoint-up(xl) {
+    .navbar {
+      padding: 0 !important;
 
-        .nav-link {
-          color: $white;
-        }
-      }
-      .nav-link {
-        // padding: 0;
-        @include media-breakpoint-up(xl) {
-          padding-top: 1.25rem;
-          padding-right: 0.85rem !important;
-          padding-bottom: 1.25rem;
-          padding-left: 0.85rem !important;
-        }
+      .navbar-nav {
+        border-top: none;
+        height: 68.58px;
 
-        .icon {
-            width: 0.75rem;
-            width: 0.75rem;
+        .nav-item {
+          border-bottom: none;
+          &:hover {
+            background-color: $cyan;
 
-            @include media-breakpoint-up(md) {
-                width: 1rem;
-                height: 1rem;
+            .nav-link {
+              color: $white;
             }
-        }
+          }
+          .nav-link {
+            padding: 1.25rem;
 
-        &:active,
-        &:hover {
-          color: $white;
-        }
-      }
+            .icon {
+              width: 1rem;
+              height: 1rem;
+            }
 
-      .dropdown-toggle {
-        &::after {
-          border: none !important; // Removed Bootstraps default arrow.
-        }
-      }
+            &:active,
+            &:hover {
+              color: $white;
+            }
 
-      .dropdown-menu {
-        background-color: $gray-100;
-        @include media-breakpoint-up(xl) {
-          margin-top: 0;
-          border: none;
-        }
-
-        .dropdown-item {
-          color: $cyan;
-          @include media-breakpoint-up(lg) {
-            @include font-size(18);
+            &.store-icon:hover::before {
+              display: block;
+              content: "";
+              background-image: url("../img/svg/shopping-cart-white.svg");
+              background-repeat: no-repeat;
+              background-size: 1.5rem;
+              width: 1.5rem;
+              height: 1.5rem;
+            }
           }
 
-          &:hover,
-          &:active {
-            color: $secondary;
-            text-decoration: underline;
+          .dropdown-toggle {
+            &.search-icon::before {
+              display: block;
+              content: "";
+              background-image: url("../img/svg/search-gray.svg");
+              background-repeat: no-repeat;
+              background-size: 1.5rem;
+              width: 1.5rem;
+              height: 1.5rem;
+            }
+
+            &.search-icon:hover::before {
+              display: block;
+              content: "";
+              background-image: url("../img/svg/search-white.svg");
+              background-repeat: no-repeat;
+              background-size: 1.5rem;
+              width: 1.5rem;
+              height: 1.5rem;
+            }
+
+            &.avatar-icon::before {
+              display: block;
+              content: "";
+              background-image: url("../img/svg/avatar-gray.svg");
+              background-repeat: no-repeat;
+              background-size: 1.5rem;
+              width: 1.5rem;
+              height: 1.5rem;
+            }
+
+            &.avatar-icon:hover::before {
+              display: block;
+              content: "";
+              background-image: url("../img/svg/avatar-white.svg");
+              background-repeat: no-repeat;
+              background-size: 1.5rem;
+              width: 1.5rem;
+              height: 1.5rem;
+            }
+
+            &:hover::after {
+              content: "";
+              background-image: url("../img/svg/chevron-down-white.svg");
+              background-repeat: no-repeat;
+              background-size: 1rem;
+              width: 1rem;
+              height: 1rem;
+              border: none;
+            }
+          }
+
+          .dropdown-menu {
+            background-color: $gray-100;
+            margin-top: 0;
+            padding-top: 0.5rem;
+            border: none;
+
+            .dropdown-item {
+              color: $cyan;
+
+              &:hover,
+              &:active {
+                color: $secondary;
+                text-decoration: underline;
+              }
+            }
+          }
+        }
+      }
+
+      .utilities {
+        border-left: 1px solid $border-color;
+        padding-left: 1.5rem;
+
+        .dropdown {
+          position: relative;
+
+          .search-dropdown-menu {
+            position: absolute;
+            left: -17.5rem;
+
+            .input-group {
+              margin-bottom: 0;
+            }
+
+            .btn .icon {
+              width: 1.5rem;
+              height: 1.5rem;
+            }
           }
         }
       }
