--- a/src/template/scss/_forms.scss
+++ b/src/template/scss/_forms.scss
@@ -99,7 +99,7 @@ form {
       @include font-size(43);
       position: absolute;
       top: -0.5rem;
-      left: -1.25rem;
+      left: -1rem;
       color: $red;
 
       @include media-breakpoint-up(lg) {
@@ -112,18 +112,9 @@ form {
   }
 
   // Billing
-  .billing-info,
-  .payment-info,
-  .shipping-info {
-    .form-group,
-    .input-group {
-      width: 327px;
-      @include media-breakpoint-up(lg) {
-        width: 445px;
-      }
-      @include media-breakpoint-up(xl) {
-        width: 535px;
-      }
+  .billing-info, .payment-info, .shipping-info {
+
+    .form-group, .input-group {
 
       &.required {
         position: relative;
@@ -132,7 +123,7 @@ form {
           content: "*";
           position: absolute;
           top: 0;
-          right: -1rem;
+          right: -1.25rem;
           @include font-size(43);
           color: $red;
           line-height: 1;
