--- a/src/template/scss/_button-groups.scss
+++ b/src/template/scss/_button-groups.scss
@@ -2,37 +2,37 @@
   cursor: pointer;
 }
 .btn-group-toggle {
-  margin-right: 0.52rem;
-  margin-bottom: 0.52rem;
-  width: 70px;
-  height: 40px;
+  // margin-right: 0.52rem;
+  // margin-bottom: 0.52rem;
+  // width: 70px;
+  // height: 40px;
 
-  @include media-breakpoint-up(lg) {
-    height: 50px;
-  }
+  // @include media-breakpoint-up(lg) {
+  //   height: 50px;
+  // }
 
-  @include media-breakpoint-up(xl) {
-    margin-right: 1.95rem;
-    margin-bottom: 1.95rem;
-  }
+  // @include media-breakpoint-up(xl) {
+  //   margin-right: 1.95rem;
+  //   margin-bottom: 1.95rem;
+  // }
 
-  &:nth-child(4n) {
-    margin-right: 0;
+  // &:nth-child(4n) {
+  //   margin-right: 0;
 
-    @include media-breakpoint-up(lg) {
-      margin-right: 0.52rem;
-    }
+  //   @include media-breakpoint-up(lg) {
+  //     margin-right: 0.52rem;
+  //   }
 
-    @include media-breakpoint-up(xl) {
-      margin-right: 1.95rem;
-    }
-  }
+  //   @include media-breakpoint-up(xl) {
+  //     margin-right: 1.95rem;
+  //   }
+  // }
 
-  &:nth-child(5n) {
-    @include media-breakpoint-up(lg) {
-      margin-right: 0;
-    }
-  }
+  // &:nth-child(5n) {
+  //   @include media-breakpoint-up(lg) {
+  //     margin-right: 0;
+  //   }
+  // }
 
   .btn-outline-secondary:not(:disabled):not(.disabled).active {
     background-color: $teal;
@@ -45,18 +45,38 @@
     @include font-size(16);
     width: 70px;
     height: 40px;
-    margin-right: 0;
-
+    margin-right: 0.52rem;
+    margin-bottom: 0.52rem !important;
     @include media-breakpoint-up(lg) {
       @include font-size(18);
       width: 70px;
       height: 50px;
     }
+    @include media-breakpoint-up(xl) {
+      margin-right: 1.95rem !important;
+      margin-bottom: 1.95rem !important;
+    }
+    &:nth-child(4n) {
+      margin-right: 0;
 
+      @include media-breakpoint-up(lg) {
+        margin-right: 0.52rem;
+      }
+
+    }
+    &:nth-child(5n) {
+      @include media-breakpoint-up(lg) {
+        margin-right: 0;
+      }
+      @include media-breakpoint-up(xl) {
+        margin-right: 0 !important;
+      }
+    }
     &:hover {
       background-color: $teal;
       border: 2px solid $cyan;
       color: $cyan;
     }
   }
+  
 }
