Updated header with cart counter, updated mobile nav with footer links.

--- a/src/template/scss/_global.scss
+++ b/src/template/scss/_global.scss
@@ -8,6 +8,12 @@ body {
   @include media-breakpoint-up(lg) {
     @include font-size(18);
   }
+
+  .moovel {
+    .moovel-hide {
+      display: none;
+    }
+  }
 }
 
 .container {
