--- a/src/template/scss/_header.scss
+++ b/src/template/scss/_header.scss
@@ -1,4 +1,4 @@
-@import "utilities";
+//@import "utilities";
 
 a.skip-to-content {
   position: absolute;
@@ -16,19 +16,10 @@ a.skip-to-content {
     transition: top 0.1s ease-in;
   }
 }
+
 #header {
   .navbar {
-    padding-bottom: 0;
-
-    // .navbar-collapse {
-    //   width: 100vw;
-    //   position: relative;
-    //   margin-left: -50vw;
-    //   left: 50%;
-    //   overflow-x: hidden;
-    //   margin-top: 0.5rem;
-    // }
-
+    padding: 0.5rem 15px;
     .navbar-nav {
       border-top: 1px solid $border-color;
 
@@ -36,21 +27,23 @@ a.skip-to-content {
         border-bottom: 1px solid $border-color;
 
         .nav-link {
-          @include font-size(18);
-          padding-right: 1rem;
-          padding-left: 1rem;
+          &:link {
+            @include font-size(18);
+            padding-right: 1rem;
+            padding-left: 1rem;
+          }
         }
 
         .dropdown-toggle {
           &::after {
             position: relative;
-            top: 0.5rem;
+            top: 0.25rem;
             content: "";
             background-image: url("../img/svg/chevron-down-gray.svg");
             background-repeat: no-repeat;
-            background-size: 1rem;
-            width: 1rem;
-            height: 1rem;
+            background-size: 0.75rem;
+            width: 0.75rem;
+            height: 0.75rem;
             border: none;
             transform: rotate(0deg);
             transition: 0.3s transform ease-in-out;
@@ -60,6 +53,7 @@ a.skip-to-content {
         &.dropdown {
           .dropdown-menu {
             border: none;
+            border-radius: 0;
 
             .dropdown-item {
               @include font-size(18);
@@ -91,6 +85,29 @@ a.skip-to-content {
             background-size: 1.5rem;
             width: 1.5rem;
             height: 1.5rem;
+          }
+
+          &.store-icon {
+            position: relative;
+
+            .badge-info {
+              border-radius: 50%;
+              font-weight: 300;
+              position: absolute;
+              top: 0.25rem;
+              left: 3rem;
+              @include media-breakpoint-up(xl) {
+                top: 0.25rem;
+                left: 2rem;
+              }
+            }
+          }
+
+          &:hover {
+            .badge-info {
+              background-color: $white;
+              color: $cyan;
+            }
           }
         }
         .dropdown-toggle {
@@ -146,32 +163,28 @@ a.skip-to-content {
     .navbar {
       padding: 0 !important;
 
+      .section {
+        padding-top: 0;
+        padding-bottom: 0;
+      }
+
       .navbar-nav {
         border-top: none;
         height: 68.58px;
 
         .nav-item {
           border-bottom: none;
-          &:hover {
-            background-color: $cyan;
-
-            .nav-link {
-              color: $white;
-            }
-          }
           .nav-link {
-            padding: 1.25rem;
-
-            .icon {
-              width: 1rem;
-              height: 1rem;
+            &:link {
+              padding: 1.4rem;
             }
 
-            &:active,
-            &:hover {
+            &:hover,
+            &:focus,
+            &:focus-within {
               color: $white;
+              background-color: $cyan;
             }
-
             &.store-icon:hover::before {
               display: block;
               content: "";
@@ -224,20 +237,21 @@ a.skip-to-content {
               height: 1.5rem;
             }
 
-            &:hover::after {
+            &:hover::after,
+            &:focus::after {
               content: "";
               background-image: url("../img/svg/chevron-down-white.svg");
               background-repeat: no-repeat;
-              background-size: 1rem;
-              width: 1rem;
-              height: 1rem;
+              background-size: 0.75rem;
+              width: 0.75rem;
+              height: 0.75rem;
               border: none;
             }
           }
 
           .dropdown-menu {
             background-color: $gray-100;
-            margin-top: 0;
+            margin-top: -3px;
             padding-top: 0.5rem;
             border: none;
 
@@ -256,23 +270,53 @@ a.skip-to-content {
 
       .utilities {
         border-left: 1px solid $border-color;
-        padding-left: 1.5rem;
+        padding-left: 1rem;
+
+        .nav-item {
+          .store-icon:focus::before {
+            display: block;
+            content: "";
+            background-image: url("../img/svg/shopping-cart-white.svg");
+            background-repeat: no-repeat;
+            background-size: 1.5rem;
+            width: 1.5rem;
+            height: 1.5rem;
+          }
+        }
+
+        .dropdown-toggle {
+          &.search-icon:focus::before {
+            display: block;
+            content: "";
+            background-image: url("../img/svg/search-white.svg");
+            background-repeat: no-repeat;
+            background-size: 1.5rem;
+            width: 1.5rem;
+            height: 1.5rem;
+          }
+
+          &.avatar-icon:focus::before {
+            display: block;
+            content: "";
+            background-image: url("../img/svg/avatar-white.svg");
+            background-repeat: no-repeat;
+            background-size: 1.5rem;
+            width: 1.5rem;
+            height: 1.5rem;
+          }
+        }
 
         .dropdown {
           position: relative;
 
+          .dropdown-menu {
+            margin-top: 0;
+          }
+
           .search-dropdown-menu {
             position: absolute;
-            left: -17.5rem;
-
-            .input-group {
-              margin-bottom: 0;
-            }
-
-            .btn .icon {
-              width: 1.5rem;
-              height: 1.5rem;
-            }
+            left: -17.1rem;
+            margin-top: 0;
           }
         }
       }
