--- a/src/template/scss/_forms.scss
+++ b/src/template/scss/_forms.scss
@@ -8,8 +8,8 @@
     margin-top: 45px;
   }
 }
-.form-group,
-.input-group {
+.form-group {
+  // .input-group {
   margin-bottom: 15px;
 
   @include media-breakpoint-up(lg) {
