Added !important to moovel classes.

--- a/src/template/scss/_global.scss
+++ b/src/template/scss/_global.scss
@@ -11,11 +11,11 @@ body {
 
   .moovel {
     .moovel-hide {
-      display: none;
+      display: none !important;
     }
 
     .moovel-show {
-      display: block;
+      display: block !important;
     }
   }
 }
