--- a/src/template/scss/app.scss
+++ b/src/template/scss/app.scss
@@ -12,6 +12,7 @@
 @import "global";
 @import "animations";
 @import "header";
+@import "moovel-header";
 @import "hero-backgrounds";
 @import "alerts";
 @import "buttons";
