Updated copyright for ada.

--- a/src/template/scss/_footer.scss
+++ b/src/template/scss/_footer.scss
@@ -56,4 +56,9 @@ footer.section {
     text-decoration: none;
     padding: 0.25rem 0;
   }
+
+  .copyright {
+    font-size: 0.9rem;
+    text-align: center;
+  }
 }
