Separated bootstrap component styles.

--- a/src/template/scss/app.scss
+++ b/src/template/scss/app.scss
@@ -11,18 +11,11 @@
 @import "mixins";
 @import "global";
 @import "animations";
+@import "hero-backgrounds";
+@import "components";
 @import "header";
 @import "moovel-header";
-@import "hero-backgrounds";
-@import "alerts";
-@import "buttons";
-@import "button-groups";
-@import "cards";
-@import "card-deck";
 @import "form-validation";
-@import "forms";
-@import "accordions";
-@import "tooltips";
 @import "primary-page";
 @import "secondary-page";
 @import "store";
